--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "storybook": "^6.0.16"
+    "storybook": "^6.0.16",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^4.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
